@@ -3,7 +3,6 @@ package com.yahoo.config.application.api;
 
 import com.google.common.collect.ImmutableSet;
 import com.yahoo.config.provision.Environment;
-import com.yahoo.config.provision.InstanceName;
 import com.yahoo.config.provision.RegionName;
 import org.junit.Test;
 
@@ -31,7 +30,7 @@ import static org.junit.Assert.fail;
 public class DeploymentSpecTest {
 
     @Test
-    public void testSpec() {
+    public void simpleSpec() {
         String specXml = "<deployment version='1.0'>" +
                          "   <instance id='default'>" +
                          "      <test/>" +
@@ -52,7 +51,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testSpecPinningMajorVersion() {
+    public void specPinningMajorVersion() {
         String specXml = "<deployment version='1.0' major-version='6'>" +
                          "   <instance id='default'>" +
                          "      <test/>" +
@@ -252,7 +251,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testMultipleInstancesShortForm() {
+    public void multipleInstancesShortForm() {
         StringReader r = new StringReader(
                 "<deployment version='1.0'>" +
                 "   <instance id='instance1, instance2'>" + // The block checked by assertCorrectFirstInstance
@@ -436,7 +435,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testOnlyAthenzServiceDefinedInInstance() {
+    public void onlyAthenzServiceDefinedInInstance() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain'>" +
                 "  <instance id='default' athenz-service='service' />" +
@@ -475,7 +474,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testTestAndStagingOutsideAndInsideInstance() {
+    public void testAndStagingOutsideAndInsideInstance() {
         StringReader r = new StringReader(
                 "<deployment>" +
                 "   <test/>" +
@@ -515,7 +514,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testNestedParallelAndSteps() {
+    public void nestedParallelAndSteps() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain'>" +
                 "   <staging />" +
@@ -588,7 +587,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testParallelInstances() {
+    public void parallelInstances() {
         StringReader r = new StringReader(
                 "<deployment>" +
                 "   <parallel>" +
@@ -617,7 +616,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testInstancesWithDelay() {
+    public void instancesWithDelay() {
         StringReader r = new StringReader(
                 "<deployment>" +
                 "    <instance id='instance0'>" +
@@ -798,7 +797,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void testChangeBlockerInheritance() {
+    public void changeBlockerInheritance() {
         StringReader r = new StringReader(
                 "<deployment version='1.0'>" +
                 "   <block-change revision='false' days='mon,tue' hours='15-16'/>" +
@@ -824,7 +823,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void athenz_config_is_read_from_deployment() {
+    public void athenzConfigIsReadFromDeployment() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain' athenz-service='service'>" +
                 "   <instance id='instance1'>" +
@@ -842,7 +841,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void athenz_config_is_propagated_through_parallel_zones() {
+    public void athenzConfigPropagatesThroughParallelZones() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain' athenz-service='service'>" +
                 "   <instance id='instance1'>" +
@@ -869,7 +868,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void athenz_config_is_propagated_through_parallel_zones_and_instances() {
+    public void athenzConfigPropagatesThroughParallelZonesAndInstances() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain' athenz-service='service'>" +
                 "   <parallel>" +
@@ -903,7 +902,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void athenz_config_is_read_from_instance() {
+    public void athenzConfigIsReadFromInstance() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain'>" +
                 "   <instance id='default' athenz-service='service'>" +
@@ -920,7 +919,7 @@ public class DeploymentSpecTest {
     }
 
     @Test
-    public void athenz_service_is_overridden_from_environment() {
+    public void athenzServiceIsOverriddenFromEnvironment() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain' athenz-service='unused-service'>" +
                 "   <instance id='default' athenz-service='service'>" +
@@ -945,7 +944,7 @@ public class DeploymentSpecTest {
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void it_fails_when_athenz_service_is_not_defined() {
+    public void missingAthenzServiceFails() {
         StringReader r = new StringReader(
                 "<deployment athenz-domain='domain'>" +
                 "   <instance id='default'>" +
@@ -959,7 +958,7 @@ public class DeploymentSpecTest {
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void it_fails_when_athenz_service_is_configured_but_not_athenz_domain() {
+    public void athenzServiceWithoutDomainFails() {
         StringReader r = new StringReader(
                 "<deployment>" +
                 "   <instance id='default'>" +
@@ -1100,7 +1099,7 @@ public class DeploymentSpecTest {
                                           "      <endpoints/>" +
                                           "   </instance>" +
                                           "</deployment>");
-        assertEquals(Collections.emptyList(), spec.requireInstance("default").endpoints());
+        assertEquals(List.of(), spec.requireInstance("default").endpoints());
     }
 
     @Test
@@ -1136,14 +1135,14 @@ public class DeploymentSpecTest {
 
     @Test
     public void invalidEndpoints() {
-        assertInvalid("<endpoint id='FOO' container-id='qrs'/>"); // Uppercase
-        assertInvalid("<endpoint id='123' container-id='qrs'/>"); // Starting with non-character
-        assertInvalid("<endpoint id='foo!' container-id='qrs'/>"); // Non-alphanumeric
-        assertInvalid("<endpoint id='foo.bar' container-id='qrs'/>");
-        assertInvalid("<endpoint id='foo--bar' container-id='qrs'/>"); // Multiple consecutive dashes
-        assertInvalid("<endpoint id='foo-' container-id='qrs'/>"); // Trailing dash
-        assertInvalid("<endpoint id='foooooooooooo' container-id='qrs'/>"); // Too long
-        assertInvalid("<endpoint id='foo' container-id='qrs'/><endpoint id='foo' container-id='qrs'/>"); // Duplicate
+        assertInvalidEndpoints("<endpoint id='FOO' container-id='qrs'/>"); // Uppercase
+        assertInvalidEndpoints("<endpoint id='123' container-id='qrs'/>"); // Starting with non-character
+        assertInvalidEndpoints("<endpoint id='foo!' container-id='qrs'/>"); // Non-alphanumeric
+        assertInvalidEndpoints("<endpoint id='foo.bar' container-id='qrs'/>");
+        assertInvalidEndpoints("<endpoint id='foo--bar' container-id='qrs'/>"); // Multiple consecutive dashes
+        assertInvalidEndpoints("<endpoint id='foo-' container-id='qrs'/>"); // Trailing dash
+        assertInvalidEndpoints("<endpoint id='foooooooooooo' container-id='qrs'/>"); // Too long
+        assertInvalidEndpoints("<endpoint id='foo' container-id='qrs'/><endpoint id='foo' container-id='qrs'/>"); // Duplicate
     }
 
     @Test
@@ -1159,8 +1158,7 @@ public class DeploymentSpecTest {
 
     @Test
     public void endpointDefaultRegions() {
-        var spec = DeploymentSpec.fromXml("" +
-                                          "<deployment>" +
+        var spec = DeploymentSpec.fromXml("<deployment>" +
                                           "   <instance id='default'>" +
                                           "      <prod>" +
                                           "         <region active=\"true\">us-east</region>" +
@@ -1181,10 +1179,10 @@ public class DeploymentSpecTest {
         assertEquals(Set.of("us-east", "us-west"), endpointRegions("default", spec));
     }
 
-    private static void assertInvalid(String endpointTag) {
+    private static void assertInvalidEndpoints(String endpointsBody) {
         try {
-            endpointIds(endpointTag);
-            fail("Expected exception for input '" + endpointTag + "'");
+            endpointIds(endpointsBody);
+            fail("Expected exception for input '" + endpointsBody + "'");
         } catch (IllegalArgumentException ignored) {}
     }
 
@@ -1196,14 +1194,14 @@ public class DeploymentSpecTest {
                 .collect(Collectors.toSet());
     }
 
-    private static List<String> endpointIds(String endpointTag) {
+    private static List<String> endpointIds(String endpointsBody) {
         var xml = "<deployment>" +
                   "   <instance id='default'>" +
                   "      <prod>" +
                   "         <region active=\"true\">us-east</region>" +
                   "      </prod>" +
                   "      <endpoints>" +
-                  endpointTag +
+                  endpointsBody +
                   "      </endpoints>" +
                   "   </instance>" +
                   "</deployment>";
